--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,6 @@
     "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "nodemon": "^3.1.4"
+    "@types/express": "^4.17.21"
   }
 }
