--- a/package.json
+++ b/package.json
@@ -1,40 +1,16 @@
 {
-  "name": "youcast",
-  "version": "0.0.1",
-  "private": true,
+  "name": "youcast-server",
+  "version": "1.0.0",
+  "description": "This is the backend api server for YouCast",
+  "main": "index.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "Sonet Adhikary",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.7.2",
-    "react": "18.2.0",
-    "react-native": "0.74.2",
-    "react-native-haptic-feedback": "^2.2.0",
-    "react-native-vector-icons": "^10.1.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.74.84",
-    "@react-native/eslint-config": "0.74.84",
-    "@react-native/metro-config": "0.74.84",
-    "@react-native/typescript-config": "0.74.84",
-    "@types/react": "^18.2.6",
-    "@types/react-native-vector-icons": "^6.4.18",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
-  },
-  "engines": {
-    "node": ">=18"
+    "express": "^4.19.2",
+    "scrape-youtube": "^2.4.0",
+    "ytdl-core": "^4.11.5"
   }
 }
