--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-haptic-feedback": "^2.2.0",
+    "react-native-track-player": "^4.1.1",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
