--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/slider": "^4.5.2",
+    "@react-navigation/bottom-tabs": "^6.6.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.10.0",
     "axios": "^1.7.2",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-haptic-feedback": "^2.2.0",
+    "react-native-safe-area-context": "^4.10.7",
+    "react-native-screens": "^3.32.0",
     "react-native-track-player": "^4.1.1",
     "react-native-vector-icons": "^10.1.0"
   },
